# BReAD

./: .gitignore  README.md  coach_prompt_base.md  framework.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: temp-checkpoint.md
configs/: sample_config.yaml
src/: main.py  test.py
src/prompt_optim_agent/: agent.py  test_helper.py  utils.py
src/prompt_optim_agent/language_model/: __init__.py  base_model.py  ct_model.py  hf_text2text_model.py  hf_textgeneration_model.py  microsoft_substrate.py  openai_model.py  palm_model.py
src/prompt_optim_agent/search_algo/: __init__.py  base_algo.py  beam_search.py  mcts.py  mcts_tree_node.py
src/prompt_optim_agent/world_model/: __init__.py  beam_world_model.py  gradient_descent.py  world_model.py
src/prompt_optim_agent/world_model/prompts/: __init__.py  gradient_descent_prompts.py  log_prompt_templates.py
src/tasks/: __init__.py  base_task.py  bigbench.py  biosses.py  cb.py  coach.py  epistemic.py  med_qa.py  ncbi.py  object_counting.py  subj.py  trec.py
