[tool.poetry]
name = "prompt-migration-agent"
version = "0.1.0"
description = ""
authors = ["Reza Davari <rezazzr@hotmail.com>"]
readme = "README.md"
packages = [{include = "prompt_migration_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
