[tool.poetry]
name = "prompt-migration-agent"
version = "0.1.0"
description = ""
authors = ["Reza Davari <rezazzr@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pandas = "^2.2.3"
wandb = "^0.19.6"
tqdm = "^4.67.1"
jupyter-black = "^0.4.0"
torch = "^2.7.1"
torchvision = "^0.22.1"
torchaudio = "^2.7.1"
yaml-config-override = "^0.5"
ctranslate2 = "^4.6.0"
transformers = "^4.52.4"
openai = "^1.84.0"
datasets = "^3.6.0"
joblib = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
